Some usage anomalies